# cumccormick

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: keep-alive.yml  linux_gpu_tests.yml  release.yml  wsl_gpu_tests.yml
examples/: CMakeLists.txt  common.h  cuda_graphs.cu
examples/basic/: CMakeLists.txt  basic.cu
examples/finance/: CMakeLists.txt  blackscholes.cu
examples/graph/: CMakeLists.txt  capture.cu  capture_ndim.cu  kernel.cu  kernel_ndim.cu  manual.cu  stream_capture.cu
examples/stream_capture/: CMakeLists.txt  stream_capture.cu
examples/vector/: CMakeLists.txt  vector.cu
include/cumccormick/: cumccormick.cuh  cumccormick.h  format.h  mccormick.h  numbers.h
include/cumccormick/arithmetic/: basic.cuh  compare.cuh  mccormick.h
src/: CMakeLists.txt  main.cu
tests/: CMakeLists.txt  tests.cpp  tests_additional.h  tests_basic.cpp  tests_basic.cu  tests_basic.h  tests_common.h  tests_randomized.cu  tests_randomized.h  tests_root.cu  tests_root.h
tests/header-only/multi-header/: CMakeLists.txt  multi_header.cu
tests/header-only/single-header/: .gitignore  CMakeLists.txt  project_header.cu  system_header.cu
tools/: profile.sh  single-header.py
